# chaos-manager

./: .prettierrc.yaml
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.module.css  App.tsx  ScheduleEditor.tsx  index.tsx
client/src/components/: AddTaskInput.tsx  Calendar.tsx  CategoryComponent.tsx  EditSVG.tsx  Home.tsx  ScheduleEditor.tsx  TaskComponent.tsx  TaskEditorCanvas.tsx  types.d.ts
client/src/types/: types.d.ts
client/src/utils/: apiUtil.ts  daysOfWeek.ts
rest-client/: cat_create.http  task_create.http  task_get.http  task_many_update.http  task_update.http
server/: Cargo.toml
server/src/: category.rs  connect.rs  duration.rs  main.rs  task.rs
