[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6.4"
postgres = "0.19.4"
tokio-postgres = "0.7.7"
tokio = "1.26.0"
